<resources>
    <string name="app_name">Eat-it</string>
    <string name="app_slogan">Where food speaks with your palate</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_account">New Account</string>
    <string name="discription">Description</string>
    <string name="title">Title</string>
    <string name="not_a_member_sign_up_here">Not a Member? Sign Up here</string>
    <string name="already_member_signin_here">Already Member?SignIn here</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign out</string>
    <string name="food">Food</string>
    <string name="_00_00">00.00</string>
    <string name="food_01">Food 01</string>
    <string name="rs">Rs.</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total :</string>
    <string name="status">Status</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_admin_home">AdminHome</string>
    <string name="select">Select</string>
    <string name="upload">UPLOAD</string>
</resources>
