<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fbutton_color_wet_asphalt"
    tools:context=".MainActivity">
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >
        <TextView
            android:layout_gravity="center"
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/app_name"
            android:fontFamily="cursive"
            />
        <TextView
            android:id="@+id/app_slogan"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/app_slogan"
            android:fontFamily="casual"
            />
    </LinearLayout>

    <Button
        android:layout_above="@+id/useLogo"
        android:id="@+id/btn_admin_signIN"
        android:layout_width="match_parent"
        android:text="@string/admin_login"
        android:gravity="center"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:background="@android:color/holo_red_dark"
        android:textAlignment="center"
        android:drawableStart="@drawable/user"
        android:drawableEnd="@drawable/user"
        />
    <LinearLayout
        android:id="@+id/useLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/signup"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            android:background="@color/btnSignUp"
            />
        <info.hoang8f.widget.FButton
            android:id="@+id/btn_signin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/signin"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</RelativeLayout>