<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="08dp"
    app:cardElevation="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cart_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_01"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center_vertical|start"
                />

            <TextView
                android:id="@+id/cart_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:layout_marginStart="10dp"
                android:textStyle="italic"
                android:gravity="center_vertical|start"
                />


        </LinearLayout>

        <ImageView
            android:id="@+id/cart_item_count"
            android:layout_width="20dp"
            android:layout_height="20sp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_shopping_cart_black_24dp"
            android:layout_gravity="center_vertical|end"
            android:contentDescription="@string/cart" />

    </LinearLayout>


</androidx.cardview.widget.CardView>