<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Cart">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/colorAccent"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="08dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:padding="05dp"
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>
            <info.hoang8f.widget.FButton
                android:id="@+id/btn_placeOrder"
                android:layout_marginRight="08dp"
                android:layout_marginLeft="08dp"
                android:layout_width="match_parent"
                android:text="@string/place_order"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_margin="08dp"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>