<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fbutton_color_wet_asphalt"
    tools:context=".ui.SignUp">

    <ScrollView
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            >

            <TextView
                android:layout_gravity="center"
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="80sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/app_name"
                android:fontFamily="cursive"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id_user_name"
                android:drawableStart="@drawable/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight"
                android:textColor="@android:color/white"
                app:met_textColorHint="#B4DFDEDE"
                android:textSize="25sp"
                android:hint="user name"
                android:textColorHint="#B4DFDEDE"
                app:met_baseColor="@android:color/white"
                app:met_underlineColor="@color/colorPrimaryDark"
                android:inputType="textPersonName"
                app:met_floatingLabelText="User Name"
                app:met_floatingLabelTextColor="@android:color/white"
                android:layout_margin="08dp"
                app:met_primaryColor="@android:color/white"
                app:met_maxCharacters="30"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id_mobile_nbr"
                android:drawableStart="@drawable/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight"
                android:textColor="@android:color/white"
                app:met_textColorHint="#B4DFDEDE"
                android:textSize="25sp"
                app:met_maxCharacters="11"
                app:met_baseColor="@android:color/white"
                app:met_underlineColor="@color/colorPrimaryDark"
                android:inputType="number"
                android:hint="phone number"
                android:textColorHint="#B4DFDEDE"
                app:met_primaryColor="@android:color/white"
                app:met_floatingLabelText="Mobile Number"
                app:met_floatingLabelTextColor="@android:color/white"
                android:layout_margin="08dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id_email"
                android:drawableStart="@drawable/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight"
                android:textColor="@android:color/white"
                app:met_textColorHint="#B4DFDEDE"
                android:textSize="25sp"
                android:textColorHint="#B4DFDEDE"
                android:hint="email id"
                app:met_baseColor="@android:color/white"
                app:met_underlineColor="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                app:met_floatingLabelText="Email"
                app:met_primaryColor="@android:color/white"
                app:met_floatingLabelTextColor="@android:color/white"
                android:layout_margin="08dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/id_password"
                android:drawableStart="@drawable/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_floatingLabel="highlight"
                android:textColor="@android:color/white"
                app:met_textColorHint="#B4DFDEDE"
                android:textSize="25sp"
                app:met_maxCharacters="12"
                android:hint="password"
                android:textColorHint="#B4DFDEDE"
                app:met_baseColor="@android:color/white"
                app:met_underlineColor="@color/colorPrimaryDark"
                android:inputType="textPassword"
                app:met_primaryColor="@android:color/white"
                app:met_floatingLabelText="Password"
                app:met_floatingLabelTextColor="@android:color/white"
                android:layout_margin="08dp" />

            <TextView
                android:id="@+id/id_signIn"
                android:gravity="center"
                android:layout_gravity="end"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_margin="08dp"
                android:textColor="@android:color/white"
                android:text="@string/already_member_signin_here"
                android:fontFamily="sans-serif-condensed"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >
        <info.hoang8f.widget.FButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:text="@string/signup"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_margin="8dp"
            />
    </LinearLayout>
</RelativeLayout>